# simple-icp-cli

./: Cargo.toml  README.md
